--- a/stylesheets/dismas.css
+++ b/stylesheets/dismas.css
@@ -23,7 +23,7 @@
   color: white;
   font-family: 'Fredericka the Great', cursive;
   font-size: 1.3em;
-  margin: 10%;
+  margin-top: 10%;
 }
 
 aside{
