Fixed minor position issue.

--- a/stylesheets/dismas.css
+++ b/stylesheets/dismas.css
@@ -33,7 +33,8 @@ img.side-image{
   margin-top: -4%;
   margin-bottom: 2%;
   font-family: "Lato";
-  font-style: italic;}
+  font-style: italic;
+}
 
 .bring-up img{
   width: 600px;
